--- a/sys/INSTALL
+++ b/sys/INSTALL
@@ -14,6 +14,13 @@ Installing:
 2. Go to the web browser and open sys/setup.php
 3. You are done.
 
+You might need to update permissions for sys/xmain.db to make sure that it is writable with the web server's user - such as www-data. To do this, you will need to execute:
+  chmod +w sys/xmain.db
+If writing is still not possible, you may need to change the user groups with root:
+  chgrp www-data sys
+  chgrp www-data sys/xmain.db
+  chmod ug+w sys/xmain.db
+
 If you want to customise more, please edit the sys/config.inc.php
 configuration file.
 
