--- a/sys/INSTALL
+++ b/sys/INSTALL
@@ -14,6 +14,9 @@ Installing:
 2. Go to the web browser and open sys/setup.php
 3. You are done.
 
+You can alter sys/config.inc.php for all the options available.
+Languages are defined in sys/language.inc.php
+
 You should never open anything in sys/ through your browser - or you'll most likely get some unexpected garbage!
 
 You might need to update permissions for sys/xmain.db to make sure that it is writable with the web server's user - such as www-data. To do this, you will need to execute:
